--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.3.0",
