--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
+    "react-input-mask": "^2.0.4",
+    "react-moment": "^1.1.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
